# tfsm

./: .bumpversion.toml  .coveragerc  CLAUDE.md  Changelog.md  MODERNIZATION_PLAN.md  README.md  STAGE3_COMPLETED.md  TYPE_HINTS_COMPLETED.md  appveyor.yml  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  ruff.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: feature_request.md  support-request.md
.github/workflows/: publish.yml  pytest.yml
docs/: TYPE_SAFETY.md
examples/: Frequently asked questions.ipynb  Graph MIxin Demo Nested.ipynb  Graph MIxin Demo.ipynb  Playground.ipynb
tests/: test_add_remove.py  test_async.py  test_async_pocket.py  test_codestyle.py  test_core.py  test_core_pocket.py  test_enum.py  test_experimental.py  test_factory.py  test_graphviz.py  test_imports.py  test_markup.py  test_mermaid.py  test_nesting.py  test_nesting_pocket.py  test_parallel.py  test_pygraphviz.py  test_reuse.py  test_states.py  test_threading.py  utils.py
tfsm/: core.py
tfsm/experimental/: utils.py
tfsm/extensions/: asyncio.py  diagrams.py  factory.py  locking.py  nesting.py
transitions/: __init__.py  core.py  version.py
transitions/experimental/: utils.py
transitions/extensions/: __init__.py  asyncio.py  diagrams.py  diagrams_base.py  diagrams_graphviz.py  diagrams_mermaid.py  diagrams_pygraphviz.py  factory.py  locking.py  markup.py  nesting.py  states.py
