[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transitions"
version = "0.9.4"
description = "A lightweight, object-oriented Python state machine implementation with many extensions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Tal Yarkoni", email = "tyarkoni@gmail.com" },
]
maintainers = [
    { name = "Alexander Neumann", email = "aleneum@gmail.com" },
]
keywords = ["state machine", "statemachine", "fsm", "finite state machine"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    # No runtime dependencies (six removed in Stage 2)
]

[project.optional-dependencies]
diagrams = [
    "pygraphviz",
    "graphviz",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-runner",
    "pytest-xdist",
    "mock",
    "dill",
    "pycodestyle",
    "mypy",
    "types-mock",
]
test = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-runner",
    "pytest-xdist",
    "mock",
    "dill",
    "pycodestyle",
]
mypy = [
    "mypy",
    "types-mock",
]

[project.urls]
Homepage = "http://github.com/pytransitions/transitions"
Documentation = "https://github.com/pytransitions/transitions"
Repository = "https://github.com/pytransitions/transitions"
"Bug Tracker" = "https://github.com/pytransitions/transitions/issues"
"Source Code" = "https://github.com/pytransitions/transitions"
Download = "https://github.com/pytransitions/transitions/archive/%s.tar.gz"

[tool.hatch.build.targets.wheel]
packages = ["transitions"]

[tool.hatch.build.targets.wheel.shared-data]
"transitions/py.typed" = "transitions/py.typed"
"transitions/data" = "transitions/data"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-runner",
    "pytest-xdist",
    "mock",
    "dill",
    "pycodestyle",
    "mypy",
    "types-mock",
]

[tool.mypy]
python_version = "3.11"
# Less strict configuration for gradual type adoption
check_untyped_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false
warn_unused_configs = true
strict_optional = true
warn_unused_ignores = false
warn_no_return = false
warn_redundant_casts = false
ignore_missing_imports = false

# Per-module overrides
[[tool.mypy.overrides]]
module = "transitions.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["transitions"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
